--- a/src/styles/sideBar.sass
+++ b/src/styles/sideBar.sass
@@ -129,7 +129,7 @@ $MigrationGradientPercent: linear-gradient(90.89deg, #F29F05 0%, #EEEEEE 50%, #0
   margin-left: 3%
   margin-top: 2vh
   border-radius: 6px !important
-  margin-bottom: 4px
+  margin-bottom: 20px
   height: 0 !important
   color: $text-color !important
   .MuiSlider-thumb
